app/sass/_base.scss
body {
  width: 90%;
  margin: 10px 10px 10px 10px;
  background-color: $color-scheme8;
  text-align: center;
  font-family: $primary-sans-serif;
}
.main {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  top: 0;
  bottom: 20;
  position: fixed;
  overflow-y: scroll;
  overflow-x: hidden;
  background-color: $color-scheme5;
  text-align: left;
  margin: 1.5% 1.5% 1.5% 7.5%;
  padding: 0 0 20px 0;
  width: 85%;
  height: 90%;
}
::-webkit-scrollbar { 
  width: 12px; height: 2px;
}
::-webkit-scrollbar-button {
  background-color: $color-scheme3; 
}
::-webkit-scrollbar-track {
  background-color: $color-scheme3;
}
::-webkit-scrollbar-track-piece {
  background-color: $color-scheme2;
}
::-webkit-scrollbar-thumb {
  height: 25px; 
  background-color: $color-scheme3; 
  border-radius: 5px;
}
::-webkit-scrollbar-corner { 
  background-color: $color-scheme3;
}
::-webkit-resizer { 
  background-color: $color-scheme2;
}
nav {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  flex-wrap: nowrap;
  justify-content: space-around;
  position: fixed;
  top: 20px;
  left: 75px;
  background-color: $color-scheme3;
  float: left;
  padding: 2px 2px 2px 2px;
  width: 10%;
  height: 92.5%;
  text-align: center;
  font-size: 2em;
}
.cadet-logo {
  position: absolute;
  top: 25px;
  padding-left: 15%;
}
.icon-home {
  position: absolute;
  top: 30%;
  padding-left: 35%;
}
.icon-files-empty {
  position: absolute;
  top: 40%;
  padding-left: 35%;
}
.icon-cog {
  position: absolute;
  bottom: 5%;
  padding-left: 35%;
}
.assignment-header {
  padding: 20px 20px 20px 20px;
}
.icon-minus {
  text-align: last;
  padding: 20px 20px 20px 20px;
}
.icon-plus {
  padding: 20px 20px 20px 20px;
}
header {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  margin: 0 0 0 7.5%;
  width: 95%;
  background-color: $color-scheme4;
  padding: 5px 5px 20px 20px;
}
article { 
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  float: right;
  margin: 0 1.5%;
  width: 77%;
}
h1 {
  width: 62%;
  background-color: $color-scheme4;
  font-family: $heading-sans-serif;
  font-size: 2em;
  font-weight: 100;
  color: $color-scheme5;
  padding: 20px 20px 20px 20px;
}
h2 {
  width: 87%;
  background-color: $color-scheme1;
  font-family: $heading-sans-serif;
  font-size: 1.5em;
  font-weight: 100;
  color: $color-scheme5;
  padding: 20px 20px 20px 20px;
}
input {
  width: 100px;
  height: 50px;
  color: $color-scheme5;
  background-color: $color-scheme1;
  border: none;
  border-radius: 10px;
  font-size: 100%;
  display: block;
  margin-left: 30px;
  margin-bottom: 10px;
  text-align: center;
}
li {
  width: 88%;
  height: 160px;
  background-color: $color-scheme4;
  list-style-type: none;
  font-size: 24px;
  font-weight: 300;
  padding: 10px 10px 10px 20px;
  margin: 10px 10px 2px 2px;
  box-shadow: 0 5px 1px $color-scheme9;
}

